Fix extra space on header for Lab DataOutputTable

--- a/src/containers/Simulator/Simulator.css
+++ b/src/containers/Simulator/Simulator.css
@@ -71,7 +71,7 @@
 }
 
 .modal-container {
-  height: 80.5%;
+  /* height: 80.5%; */
   /*Maybe try?*/
   /* overflow-x: scroll;
   overflow-y: scroll; */
